# comfy_ui_cat_vton_docker

./: .WORKSPACE.swp  .gitignore  BUILD.bazel  Dockerfile  docker-compose.yml  entrypoint.sh
.ipynb_checkpoints/: WORKSPACE-checkpoint
models/CatVTON/DensePose/: Base-DensePose-RCNN-FPN.yaml
models/CatVTON/dresscode-16k-512/attention/: model.safetensors
models/CatVTON/mix-48k-1024/attention/: model.safetensors
models/CatVTON/stable-diffusion-inpainting/unet/: diffusion_pytorch_model.safetensors
models/CatVTON/vitonhd-16k-512/attention/: model.safetensors
models/sams/: sam_hq_vit_b.pth  sam_hq_vit_h.pth  sam_hq_vit_l.pth  sam_hq_vit_tiny.pth
